--- a/sampletext.html
+++ b/sampletext.html
@@ -11,6 +11,13 @@
   </style>
 </head>
 <body>
-<p class="p1">this is sample text</p>
+<p class="p1">&lt;!DOCTYPE HTML&gt;</p>
+<p class="p1">&lt;html&gt;</p>
+<p class="p1">&lt;head&gt;</p>
+<p class="p1">&lt;/head&gt;</p>
+<p class="p1">&lt;body&gt;</p>
+<p class="p1">sample</p>
+<p class="p1">&lt;/body)</p>
+<p class="p1">&lt;/html&gt;</p>
 </body>
 </html>
